--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node ./src/index.ts",
+    "start:dev": "ts-node-dev ./src/index.ts",
     "build": "tsc",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -24,6 +25,7 @@
     "moment": "^2.27.0",
     "serveless": "0.0.2",
     "ts-node": "^8.10.2",
+    "ts-node-dev": "^1.0.0-pre.59",
     "typescript": "^3.9.7",
     "uuid": "^8.3.0"
   },
